- Fixed to fit different screen sizes - Sign up button works after signing up - Variables identified - A toast on successful registration (method to check info is implemented, needs Mohsen code) - On successful log in, sign up activity shows up. it can be replaced later. - Get date (not sure of it or how to send it to the data base)

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,21 +11,23 @@
         android:layout_width="320dp"
         android:layout_height="45dp"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.076"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.465" />
+        app:layout_constraintVertical_bias="0.465"
+        tools:ignore="Autofill"
+        />
 
     <EditText
         android:id="@+id/supass"
         android:layout_width="320dp"
         android:layout_height="45dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +41,7 @@
         android:layout_width="320dp"
         android:layout_height="45dp"
         android:ems="10"
-        android:hint="Confirm Paaword"
+        android:hint="@string/confirm_paaword"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +55,7 @@
         android:layout_width="320dp"
         android:layout_height="45dp"
         android:ems="10"
-        android:hint="Last Name"
+        android:hint="@string/last_name"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/email"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +69,7 @@
         android:layout_width="320dp"
         android:layout_height="45dp"
         android:ems="10"
-        android:hint="First Name"
+        android:hint="@string/first_name"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/lname"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +83,7 @@
         android:layout_width="320dp"
         android:layout_height="45dp"
         android:ems="10"
-        android:hint="Phone Number"
+        android:hint="@string/phone_number"
         android:inputType="phone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
